changed image pull policy to always

--- a/kubernetes/cassandra-statefulset.yaml
+++ b/kubernetes/cassandra-statefulset.yaml
@@ -40,7 +40,7 @@ spec:
           image: spakmaro/k8s-cassandra:latest
           command: ["/bin/sh"]
           args: ["-c", "/helpers/entrypoint.sh"]
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           securityContext:
             capabilities:
               add:
